kubernetes/apps/kube-system/cilium/config/cilium-l2.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-all-with-l7-visibility
spec:
  endpointSelector: {}
  egress:
    - toEndpoints: []
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
          rules:
            http:
              - {}
    - toEntities:
      - world
      - cluster
      - host
  ingress:
    - fromEndpoints: []
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
          rules:
            http:
              - {}
    - fromEntities:
      - world
      - cluster
      - host
